--- a/index.html
+++ b/index.html
@@ -155,6 +155,12 @@
           </div>
         </div>
       </div>
+      <p class="author-rights">
+        <a href="https://github.com/nogueiram-27/weather-app" target="_blank"
+          >Open-source code</a
+        >
+        by Maria Nogueira
+      </p>
     </div>
 
     <script src="src/weather-app.js"></script>
