added dynamic icons and hourly forecast (html, css and js)
nogueiram-27 20201119

ATTENTION: this is a draft version to deploy the app functionalities. values and layout must be updated

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                 <span id="curr-wind-speed"></span> km/h
               </p>
             </div>
-            <div class="col-6 align-self-center">
-              <i class="far fa-sun"></i>
+            <div class="col-6">
+              <img class="curr-icon" id="curr-weather-icon" />
             </div>
           </div>
         </div>
@@ -103,56 +103,12 @@
         </div>
 
         <div class="next-days">
-          <div class="row">
-            <div class="blank-col col-1"></div>
+          <div class="row" id="forecast">
             <div class="col-2">
-              <i class="fas fa-cloud-sun pred-weather-icon"></i>
-              <br />
-              <p class="day-week">MON</p>
+              <p class="next-hour"></p>
+              <img class="pred-icon" />
               <p class="pred-temp">
-                <span class="temp-min">22</span>º/<span class="temp-max"
-                  >24</span
-                >º
-              </p>
-            </div>
-            <div class="col-2">
-              <i class="fas fa-cloud-sun pred-weather-icon"></i>
-              <br />
-              <p class="day-week">TUE</p>
-              <p class="pred-temp">
-                <span class="temp-min">21</span>º/<span class="temp-max"
-                  >24</span
-                >º
-              </p>
-            </div>
-            <div class="col-2">
-              <i class="fas fa-cloud pred-weather-icon"></i>
-              <br />
-              <p class="day-week">WED</p>
-              <p class="pred-temp">
-                <span class="temp-min">20</span>º/<span class="temp-max"
-                  >22</span
-                >º
-              </p>
-            </div>
-            <div class="col-2">
-              <i class="fas fa-cloud pred-weather-icon"></i>
-              <br />
-              <p class="day-week">THU</p>
-              <p class="pred-temp">
-                <span class="temp-min">19</span>º/<span class="temp-max"
-                  >21</span
-                >º
-              </p>
-            </div>
-            <div class="col-2">
-              <i class="fas fa-cloud-rain pred-weather-icon"></i>
-              <br />
-              <p class="day-week">FRI</p>
-              <p class="pred-temp">
-                <span class="temp-min">18</span>º/<span class="temp-max"
-                  >20</span
-                >º
+                <span class="temp-min"></span>º/<span class="temp-max"></span>º
               </p>
             </div>
           </div>
