added new section to show weather advice (html and css)
nogueiram-27 20201121

DRAFT VERSION

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
       rel="stylesheet"
     />
 
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@1,300&family=Work+Sans:ital,wght@1,200&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="src/weather-app.css" />
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -104,7 +110,16 @@
               </div>
             </div>
 
-            <div class="col-4"></div>
+            <div class="col-4">
+              <div class="weather-advice-wrapper">
+                <div class="weather-advice">
+                  <p>"Better return home to grab your umbrella!"</p>
+                </div>
+                <div class="weather-advice-icon">
+                  <i class="fas fa-umbrella"></i>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
 
