added weather advice js
nogueiram-27 20201122

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="col-4">
               <div class="weather-advice-wrapper">
                 <div class="weather-advice">
-                  <p>"Better return home to grab your umbrella!"</p>
+                  <p></p>
                 </div>
                 <div class="weather-advice-icon">
                   <i class="fas fa-umbrella"></i>
@@ -146,6 +146,13 @@
           >Open-source code</a
         >
         by Maria Nogueira
+      </p>
+
+      <p class="final-message">
+        * Since we are living in a pandemic situation, it is important more than
+        ever to be kind, patient and supportive. I hope you are safe, and taking
+        care of everyone around you.
+        <i class="fas fa-head-side-cough-slash"></i>
       </p>
     </div>
 
